--- a/index.html
+++ b/index.html
@@ -144,22 +144,22 @@
                 <h2 class="text-4xl font-bold text-center mb-12 text-gradient">【ブルアカ】ガチャ動画</h2>
                 <div class="relative scroll-section">
                     <div class="scroll-container flex overflow-x-auto space-x-8 py-8 px-8 scrollbar-hide">
-                        <a href="https://www.youtube.com/watch?v=F_f-VzK4Zz0" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/F_f-VzK4Zz0/hqdefault.jpg" alt="【ブルアカ】「「「「　リ　ツ　な　の　だ　」」」」" class="w-full h-48 object-cover">
+                        <a href="https://youtu.be/D3JKtrgP3As" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block">
+                            <img src="https://i.ytimg.com/vi/D3JKtrgP3As/hqdefault.jpg" alt="【ブルアカ】「「「「　リ　ツ　な　の　だ　」」」」" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【ブルアカ】「「「「　リ　ツ　な　の　だ　」」」」</h3>
                                 <p class="text-gray-400 text-base">リツを狙ってガチャに挑戦！</p>
                             </div>
                         </a>
                         <a href="https://youtu.be/pCLGUvtAc-4" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/Xn78iX6F37Q/hqdefault.jpg" alt="【ブルアカ】久方ぶりの邂逅...いや、4周年ぶりだね" class="w-full h-48 object-cover">
+                            <img src="https://i.ytimg.com/vi/pCLGUvtAc-4/hqdefault.jpg" alt="【ブルアカ】久方ぶりの邂逅...いや、4周年ぶりだね" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【ブルアカ】久方ぶりの邂逅...いや、4周年ぶりだね</h3>
                                 <p class="text-gray-400 text-base">水着セイアを狙ってガチャに挑戦！</p>
                             </div>
                         </a>
                         <a href="https://youtu.be/g5qotp4D_MA" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/Kz6M8T7B1J4/hqdefault.jpg" alt="【ブルアカ】止まるんじゃねぇぞ…！シュポガキ天井列車編" class="w-full h-48 object-cover">
+                            <img src="https://i.ytimg.com/vi/g5qotp4D_MA/hqdefault.jpg" alt="【ブルアカ】止まるんじゃねぇぞ…！シュポガキ天井列車編" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【ブルアカ】止まるんじゃねぇぞ…！シュポガキ天井列車編</h3>
                                 <p class="text-gray-400 text-base">初ガチャ動画！シュポガキを狙ってガチャに挑戦！</p>
@@ -183,7 +183,7 @@
                 <div class="relative scroll-section">
                     <div class="scroll-container flex overflow-x-auto space-x-8 py-8 px-8 scrollbar-hide">
                         <a href="https://youtu.be/MKK95k6py9U" target="_blank" class="w-80 flex-shrink-0 bg-slate-700 rounded-lg overflow-hidden shadow-2xl shadow-pink-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/9j9w-rX2W7g/hqdefault.jpg" alt="【リンバス】魔法少女ドンキの可愛さ、マジやばくね？引くしかねぇだろッ！！！" class="w-full h-48 object-cover">
+                            <img src="https://i.ytimg.com/vi/MKK95k6py9U/hqdefault.jpg" alt="【リンバス】魔法少女ドンキの可愛さ、マジやばくね？引くしかねぇだろッ！！！" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【リンバス】魔法少女ドンキの可愛さ、マジやばくね？引くしかねぇだろッ！！！</h3>
                                 <p class="text-gray-400 text-base">憎しみの女王ドンキ・絶望の騎士ロージャを狙ってガチャに挑戦！</p>
@@ -221,35 +221,35 @@
                  <div class="relative scroll-section">
                     <div class="scroll-container flex overflow-x-auto space-x-8 py-8 px-8 scrollbar-hide">
                          <a href="https://www.youtube.com/playlist?list=PL_UmcurlIUw3FvvC5RmnnDXJ1uk9lbzhC" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/HcLP6meh_a8/hqdefault.jpg" alt="【リンバス】8.5章配信アーカイブ" class="w-full h-48 object-cover">
+                            <img src="https://i.ytimg.com/vi/PL_UmcurlIUw3FvvC5RmnnDXJ1uk9lbzhC/hqdefault.jpg" alt="【リンバス】8.5章配信アーカイブ" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【リンバス】8.5章配信アーカイブ</h3>
                                 <p class="text-gray-400 text-base">リンバスの8.5章配信一覧です！</p>
                             </div>
                         </a>
                         <a href="https://www.youtube.com/playlist?list=PL_UmcurlIUw3hLBOuUN28NdEeBuBFvANx" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/S0y_6m5r5u0/hqdefault.jpg" alt="【リンバス】ヴァルプル配信アーカイブ" class="w-full h-48 object-cover">
+                            <img src="https://i.ytimg.com/vi/PL_UmcurlIUw3hLBOuUN28NdEeBuBFvANx/hqdefault.jpg" alt="【リンバス】ヴァルプル配信アーカイブ" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【リンバス】ヴァルプル配信アーカイブ</h3>
                                 <p class="text-gray-400 text-base">リンバスのヴァルプルギスの夜イベント配信一覧です！</p>
                             </div>
                         </a>
                         <a href="https://www.youtube.com/playlist?list=PL_UmcurlIUw3ab7zs48bc0qh0wPz8j2fW" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/Fj-y5_m_1z4/hqdefault.jpg" alt="【リンバス】8章配信アーカイブ" class="w-full h-48 object-cover">
+                            <img src="https://i.ytimg.com/vi/PL_UmcurlIUw3ab7zs48bc0qh0wPz8j2fW/hqdefault.jpg" alt="【リンバス】8章配信アーカイブ" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【リンバス】8章配信アーカイブ</h3>
                                 <p class="text-gray-400 text-base">リンバスの8章配信一覧です！</p>
                             </div>
                         </a>
                         <a href="https://www.youtube.com/playlist?list=PL_UmcurlIUw39YDi-4dm7k3fqs7tceWE7" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/Fj-y5_m_1z4/hqdefault.jpg" alt="【リンバス】7.5章配信アーカイブ" class="w-full h-48 object-cover">
+                            <img src="https://i.ytimg.com/vi/PL_UmcurlIUw39YDi-4dm7k3fqs7tceWE7/hqdefault.jpg" alt="【リンバス】7.5章配信アーカイブ" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【リンバス】7.5章配信アーカイブ</h3>
                                 <p class="text-gray-400 text-base">リンバスの7.5章配信一覧です！</p>
                             </div>
                         </a>
                         <a href="https://www.youtube.com/playlist?list=PL_UmcurlIUw2V_eisjp-NYyUPXt9HsX2C" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/Fj-y5_m_1z4/hqdefault.jpg" alt="【リンバス】7章配信アーカイブ" class="w-full h-48 object-cover">
+                            <img src="https://i.ytimg.com/vi/PL_UmcurlIUw2V_eisjp-NYyUPXt9HsX2C/hqdefault.jpg" alt="【リンバス】7章配信アーカイブ" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【リンバス】7章配信アーカイブ</h3>
                                 <p class="text-gray-400 text-base">リンバスの7章配信一覧です！</p>
@@ -273,7 +273,7 @@
                  <div class="relative scroll-section">
                     <div class="scroll-container flex overflow-x-auto space-x-8 py-8 px-8 scrollbar-hide">
                         <a href="https://www.youtube.com/playlist?list=PL_UmcurlIUw2rfWNRqiNIjWoXptBNA93_" target="_blank" class="w-80 flex-shrink-0 bg-slate-700 rounded-lg overflow-hidden shadow-2xl shadow-pink-900/20 video-thumbnail block">
-                            <img src="https://i.ytimg.com/vi/bMv62_gA8Fk/hqdefault.jpg" alt="【ブルアカ】イベント配信アーカイブ" class="w-full h-48 object-cover">
+                            <img src="https://i.ytimg.com/vi/PL_UmcurlIUw2rfWNRqiNIjWoXptBNA93_/hqdefault.jpg" alt="【ブルアカ】イベント配信アーカイブ" class="w-full h-48 object-cover">
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【ブルアカ】イベント配信アーカイブ</h3>
                                 <p class="text-gray-400 text-base">ブルアカのイベント配信一覧です！</p>
