--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
         <section id="about" class="py-20 bg-slate-800/50 fade-in-section">
             <div class="container mx-auto px-6">
                 <div class="flex flex-col md:flex-row-reverse items-center gap-12">
-                    <div class="md:w-1/2 flex justify-center">
-                        <img src="https://yt3.googleusercontent.com/ytc/AIdro_nHycBvdWyLF7srJjJ8qASCa3RQJxI8kyGX5V3EXjatQw=s160-c-k-c0x00ffffff-no-rj" alt="TM7のプロフィール画像" class="rounded-full shadow-2xl w-64 h-64 md:w-96 md:h-96 profile-border object-cover protected-image-container">
+                    <div class="md:w-1/2 flex justify-center protected-image-container">
+                        <img src="https://yt3.googleusercontent.com/ytc/AIdro_nHycBvdWyLF7srJjJ8qASCa3RQJxI8kyGX5V3EXjatQw=s160-c-k-c0x00ffffff-no-rj" alt="TM7のプロフィール画像" class="rounded-full shadow-2xl w-64 h-64 md:w-96 md:h-96 profile-border object-cover">
                     </div>
                     <div class="md:w-1/2 text-center md:text-left">
                         <h2 class="text-4xl font-bold text-white mb-4 text-gradient">TM7について</h2>
@@ -446,7 +446,7 @@
                     : "何か面白いガチャの儀式を生成してください。";
                 
                 const systemPrompt = "あなたはガチャを愛する神託者です。『ブルーアーカイブ』や『リンバス・カンパニー』のようなゲームでガチャを引こうとしているプレイヤーのために、短くて面白く、少し馬鹿げた「幸運の儀式」を生成してください。儀式は1〜2文で、創造的でユーモラスな内容にしてください。必ず日本語で応答してください。";
-                const apiKey = "";
+                const apiKey = "gen-lang-client-0366338226";
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
                 const payload = {
