--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 
                 const userQuery = `ゲーム「${selectedGame}」のキャラクター「${characterName}」が登場する、面白い「もしも」のシナリオを生成してください。`;
                 const systemPrompt = "あなたは『ブルーアーカイブ』と『リンバス・カンパニー』を専門とするクリエイティブなシナリオライターです。ユーザーのリクエストに基づき、指定されたキャラクターが登場する、短く（3〜4文程度）、面白く、少しユーモラスな「もしも」のシナリオやミニストーリーを生成してください。物語は、指定されたゲームとキャラクターの本質を捉えたものでなければなりません。必ず日本語で応答してください。";
-                const apiKey = "";
+                const apiKey = "AIzaSyDocA0_P6laOIYlNt3YovPvNOC5qid9yzI";
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
                 const payload = {
