--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <a href="#bluearchive-streams" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">ブルアカ配信</a>
                     <a href="#gemini-feature" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">AI願掛け</a>
                     <a href="#gemini-scenario-feature" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">AIシナリオ</a>
-                    <a href="#about" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">About</a>
+                    <a href="#about" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">About Me</a>
                 </nav>
                 <a href="https://www.youtube.com/@TM7_0306?sub_confirmation=1" target="_blank" class="hidden md:inline-block bg-gradient-to-r from-purple-600 to-pink-600 text-white font-bold py-2 px-5 rounded-full hover:from-purple-500 hover:to-pink-500 transition-all duration-300 glow-button">
                     チャンネル登録
