--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                 <div class="text-3xl font-black tracking-wider text-white">TM7</div>
                 <nav id="mobile-menu" class="hidden absolute md:relative top-full left-0 w-full bg-slate-900 md:bg-transparent md:flex md:items-center md:space-x-4 md:w-auto">
                     <a href="#bluearchive-gacha" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">ブルアカガチャ</a>
+                    <a href="#bluearchive-realevent" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">ブルアカイベ</a>
                     <a href="#limbus-gacha" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">リンバスガチャ</a>
                     <a href="#limbus-streams" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">リンバス配信</a>
                     <a href="#bluearchive-streams" class="block md:inline-block px-4 py-2 text-gray-300 hover:text-pink-400 transition-colors duration-300 text-sm">ブルアカ配信</a>
@@ -170,6 +171,13 @@
                 <h2 class="text-4xl font-bold text-center mb-12 text-gradient">【ブルアカ】ガチャ動画</h2>
                 <div class="relative scroll-section">
                     <div class="scroll-container flex overflow-x-auto space-x-8 py-8 px-8 scrollbar-hide">
+                        <a href="https://youtu.be/wJUA1vEC45U" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block protected-image-container">
+                            <img src="https://i.ytimg.com/vi/wJUA1vEC45U/hqdefault.jpg" alt="【ブルアカ】呼ばれて飛び出てジャジャジャジャーン！" class="w-full h-48 object-cover">
+                            <div class="p-6">
+                                <h3 class="font-bold text-xl mb-2 text-white">【ブルアカ】呼ばれて飛び出てジャジャジャジャーン！</h3>
+                                <p class="text-gray-400 text-base">マジカル自警団を狙ってガチャに挑戦！</p>
+                            </div>
+                        </a>
                         <a href="https://youtu.be/D3JKtrgP3As" target="_blank" class="w-80 flex-shrink-0 bg-slate-800 rounded-lg overflow-hidden shadow-2xl shadow-purple-900/20 video-thumbnail block protected-image-container">
                             <img src="https://i.ytimg.com/vi/D3JKtrgP3As/hqdefault.jpg" alt="【ブルアカ】「「「「　リ　ツ　な　の　だ　」」」」" class="w-full h-48 object-cover">
                             <div class="p-6">
@@ -189,6 +197,30 @@
                             <div class="p-6">
                                 <h3 class="font-bold text-xl mb-2 text-white">【ブルアカ】止まるんじゃねぇぞ…！シュポガキ天井列車編</h3>
                                 <p class="text-gray-400 text-base">初ガチャ動画！シュポガキを狙ってガチャに挑戦！</p>
+                            </div>
+                        </a>
+                    </div>
+                    <button class="scroll-btn left-2 absolute top-1/2 -translate-y-1/2 bg-slate-800/50 hover:bg-slate-700/80 p-2 rounded-full z-30 transition-colors duration-300 w-10 h-10 flex items-center justify-center">
+                        <i class="fas fa-chevron-left text-white"></i>
+                    </button>
+                    <button class="scroll-btn right-2 absolute top-1/2 -translate-y-1/2 bg-slate-800/50 hover:bg-slate-700/80 p-2 rounded-full z-30 transition-colors duration-300 w-10 h-10 flex items-center justify-center">
+                        <i class="fas fa-chevron-right text-white"></i>
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <!-- 【ブルアカ】リアイベ動画 Section -->
+        <section id="bluearchive-realevent" class="py-20 bg-slate-800/50 fade-in-section">
+            <div class="container mx-auto px-6">
+                <h2 class="text-4xl font-bold text-center mb-12 text-gradient">【ブルアカ】リアイベ動画</h2>
+                <div class="relative scroll-section">
+                    <div class="scroll-container flex overflow-x-auto space-x-8 py-8 px-8 scrollbar-hide">
+                        <a href="https://youtu.be/kotGrHShUVo" target="_blank" class="w-80 flex-shrink-0 bg-slate-700 rounded-lg overflow-hidden shadow-2xl shadow-pink-900/20 video-thumbnail block protected-image-container">
+                            <img src="https://i.ytimg.com/vi/kotGrHShUVo/hqdefault.jpg" alt="【リアイベ】ミッションコンプリート！２に潜入してきた！【ブルアカ】" class="w-full h-48 object-cover">
+                            <div class="p-6">
+                                <h3 class="font-bold text-xl mb-2 text-white">【リアイベ】ミッションコンプリート！２に潜入してきた！【ブルアカ】</h3>
+                                <p class="text-gray-400 text-base">ゲーム開発部オンリー即売会の戦利品紹介動画です！</p>
                             </div>
                         </a>
                     </div>
